cabal-version:       >=1.10

name:                stdout-tests
version:             0.1.0.0
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable stdout-tests
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
                     , bytestring
                     , random
                     , splitmix
  default-language:    Haskell2010
